# nexcore-dataframe

./: Cargo.toml  README.md
src/: agg.rs  column.rs  counter.rs  dataframe.rs  error.rs  filter.rs  group.rs  join.rs  lib.rs  scalar.rs  schema.rs  select.rs  sort.rs
src/io/: json.rs  mod.rs
